# hitori

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
hitori/: Cargo.toml
hitori-examples/: Cargo.toml
hitori-examples/src/: all_patterns.rs  any_patterns.rs  capturing.rs  generics.rs  lib.rs  positions.rs  putting_everything_together.rs  repetitions.rs
hitori-examples/src/all_patterns/: bad_password.rs  hello.rs  true_.rs
hitori-examples/src/any_patterns/: false_.rs  float_type.rs
hitori-examples/src/capturing/: fraction.rs  rectangle.rs  shopping_list.rs
hitori-examples/src/generics/: all_in.rs
hitori-examples/src/positions/: train_cars.rs
hitori-examples/src/putting_everything_together/: email.rs  ipv4.rs  uri.rs
hitori-examples/src/repetitions/: binary_u32.rs  identifier.rs  would_you_kindly.rs
hitori-macros/: Cargo.toml
hitori-macros/src/: expand.rs  lib.rs  parse.rs  utils.rs
hitori-macros/src/expand/: capture.rs  define.rs  impl_.rs  matches_block.rs  old_matches_block.rs  starts_with_block.rs
hitori-macros/src/expand/impl_/: __new_matches_block.rs  matches_block.rs
hitori-macros/src/expand/matches_block/: cache.rs  repeat.rs  repeat_new.rs  state.rs
hitori-macros/src/expand/starts_with_block/: cache.rs  repeat.rs  state.rs
hitori-macros/src/parse/: args.rs  define.rs  impl_.rs  position.rs  repeat.rs
hitori/benches/: hitori_vs_regex.rs
hitori/src/: capture.rs  examples.rs  expr.rs  generic.rs  lib.rs  string.rs  traits.rs
hitori/src/examples/: aaaaa.rs  all_patterns.rs  any_patterns.rs  bad_password.rs  binary_u32.rs  capturing.rs  email.rs  false_.rs  float.rs  float_type.rs  fraction.rs  generics.rs  hello.rs  identifier.rs  ipv4.rs  positions.rs  putting_everything_together.rs  rectangle.rs  repetitions.rs  shopping_list.rs  train_cars.rs  true_.rs  uri.rs  would_you_kindly.rs
hitori/src/examples/all_patterns/: hello.rs  true_.rs
hitori/src/examples/any_patterns/: float_type.rs
hitori/src/examples/capturing/: rectangle.rs  shopping_list.rs
hitori/src/examples/generics/: all_in.rs
hitori/src/examples/putting_everything_together/: email.rs  ipv4.rs  uri.rs
hitori/src/examples/repetitions/: binary_u32.rs  identifier.rs  would_you_kindly.rs
