[package]
name = "hitori-macros"
version = "0.1.0"
authors = ["Artur Helmanau <m30bit@gmail.com>"]
description = "Macros for hitori"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/30bit/hitori"

[lib]
proc-macro = true

[features]
box = []
debug = ["rust-format"]

[dependencies]
proc-macro-crate = { version = "1.3.1", optional = true }
proc-macro2 = "1.0.51"
quote = { version = "1.0.23", default-features = false }
syn = { version = "1.0.109", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
rust-format = { version = "0.3.4", features = [
    "token_stream",
], optional = true }
