[package]
name = "hitori-macros"
description = "Macros for hitori"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
box = []
debug = ["rust-format"]

[dependencies]
proc-macro-crate = { version = "1.3.1", optional = true }
proc-macro2 = "1.0.51"
quote = { version = "1.0.23", default-features = false }
syn = { version = "1.0.109", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
rust-format = { version = "0.3.4", features = [
    "token_stream",
], optional = true }
