[package]
name = "hitori-macros"
description = "Macros for hitori"
documentation = "https://docs.rs/hitori-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
debug = ["rust-format"]

[dependencies]
proc-macro-crate = { version = "1.3.1", optional = true }
proc-macro2 = "1.0.51"
quote = { version = "1.0.23", default-features = false }
syn = { version = "2.0.15", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
rust-format = { version = "0.3.4", features = [
    "token_stream",
], optional = true }
