[package]
name = "hitori"
categories = ["text-processing"]
description = "Generic regular expressions"
keywords = ["regex"]
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
default = ["box", "macros"]
# blanket implementations of all traits for boxes using alloc crate.
box = ["hitori-macros?/box"]
# `impl_expr_mut` and `impl_expr` macros.
macros = ["hitori-macros"]
# finds hitori package to be used in macros even if
# it has been renamed in Cargo.toml. `macros` is required.
find-hitori = ["hitori-macros?/proc-macro-crate"]
# includes examples module into build
examples = []

[dependencies]
hitori-macros = { version = "=0.1.5", path = "../hitori-macros", optional = true }

[dev-dependencies]
regex = "1.7.3"
